--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "scripts": {
     "sass": "node-sass --watch assets/styles/scss -o assets/styles",
     "serve": "browser-sync start --server --files 'index.html, assets/styles/main.css, assets/scripts/index.js'"
+  },
+  "dependencies": {
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2"
   }
 }
