--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "serve": "browser-sync start --server --files 'index.html, assets/styles/main.css, assets/scripts/index.js'"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2"
   }
