--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
     "bootstrap": "^4.3.1",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
-<<<<<<< HEAD
     "jquery": "^1.9.1",
-    "popper.js": "^1.14.7"
-=======
+    "popper.js": "^1.14.7",
     "jquery": "^1.12.4",
     "popper.js": "^1.15.0"
->>>>>>> Added packages
   }
 }
